Change of key mapping for Mac compatibility
	modified:   Mixins.py
	modified:   doc/manual/manual.tex
	modified:   doc/manual/quickref.html
	modified:   gtkw/FitsImageGtk.py

- Change Ctrl + Digit to Shift + Digit to invoke inverse zoom
  - Ctrl + Digit doesn't work the same way on the Mac

--- a/doc/manual/manual.tex
+++ b/doc/manual/manual.tex
@@ -826,7 +826,7 @@ window has the focus.
 \begin{tabularx}{\textwidth}{lX}
 Scroll wheel turned & Zoom in or out \\
 Digit ({\tt 1234567890}) & Zoom image to 1X, 2X, ..., 9X, 10X \\
-Ctrl + Digit & Zoom image to 1/2X, 1/3X, ..., 1/9X, 1/10X \\
+Shift + Digit & Zoom image to 1/2X, 1/3X, ..., 1/9X, 1/10X \\
 Backquote (\`{}) & Zoom image to fit window \\
 Minus, Underscore ({\tt -\textunderscore{}}) & Zoom out \\
 Equals, Plus ({\tt =+}) & Zoom in \\
