Fixed name of script which caused an import error in default install
	deleted:    Makefile
	modified:   README.txt
	modified:   ginga/doc/INSTALL.txt
	renamed:    examples/example1_gtk.py -> scripts/example1_gtk.py
	renamed:    examples/example1_qt.py -> scripts/example1_qt.py
	renamed:    examples/example2_gtk.py -> scripts/example2_gtk.py
	renamed:    examples/example2_qt.py -> scripts/example2_qt.py
	renamed:    ginga.py -> scripts/ginga
	modified:   setup.py

- ginga.py becomes scripts/ginga
  - should fix import error with ginga package prefix
- removed useless old Makefile
- slight updates of README and INSTALL instructions

--- a/ginga/doc/INSTALL.txt
+++ b/ginga/doc/INSTALL.txt
@@ -27,6 +27,10 @@ OR
 
 python-qt4
 
+OR
+
+python-pyside
+
 (Mac and Windows platforms should probably install the Qt version,
 unless you are adventurous.  Either one works fine on Linux.)
 
