Fixed some bugs relating to the generation of thumbnails
	modified:   README.txt
	modified:   ginga/Control.py
	modified:   ginga/FitsImage.py
	modified:   ginga/doc/INSTALL-Linux.txt
	modified:   ginga/doc/INSTALL.txt
	modified:   ginga/gtkw/FitsImageGtk.py
	modified:   ginga/gtkw/plugins/Thumbs.py
	modified:   ginga/misc/Settings.py
	modified:   ginga/qtw/FitsImageQt.py
	modified:   ginga/qtw/plugins/Thumbs.py

- fixed a bug where not all thumbnails would be generated if multiple
    files were dropped on the window
- disabled automatic strolling to the bottom of the thumbs pane when new
    thumbs are added
- suppressed an error where a divide-by-zero error is generated on a blank
    image
- updated documentation slightly to reflect new distutils-based installation

--- a/ginga/doc/INSTALL.txt
+++ b/ginga/doc/INSTALL.txt
@@ -29,7 +29,7 @@ python-qt4
 
 OR
 
-python-pyside
+python-pyside (qt4 alternative)
 
 (Mac and Windows platforms should probably install the Qt version,
 unless you are adventurous.  Either one works fine on Linux.)
