Bug fixes and updates for Ginga
- fixed a bug where cut levels boxes were shifted in Info plugin if
    OBJECT name is too long
- fixed a bug where thumbnail generation could be halted if the window
    was resized during generation

--- a/ginga/doc/manual/manual.tex
+++ b/ginga/doc/manual/manual.tex
@@ -102,8 +102,9 @@ National Astronomical Observatory of Japan}
 \maketitle 
 
 \begin{abstract}
-Ginga is a viewer for astronomical data FITS (Flexible Image Transport
-System) files.
+Ginga is a toolkit for building viewers for scientific data in Python,
+particularly astromonical data.  It includes a reference viewer for
+FITS (Flexible Image Transport System) files.
 The Ginga viewer is based on a new FITS display widget which supports 
 zooming and panning, color and intensity mapping, a choice of several
 automatic cut levels algorithms and canvases for plotting scalable
@@ -148,8 +149,8 @@ windows, star catalog access, cuts, star pick/fwhm, thumbnails, etc.
 
 \section{Core Concepts}
 Ginga operation and documentation is organized around a few core
-concepts and associated terminology.  Knowing these may aid in
-comprehending the rest of the documentation. 
+concepts and associated nomenclature.  Knowing these may aid in
+understanding the rest of the documentation. 
 
 \subsection{Workspaces}
 Ginga has a flexible panel/workspace layout algorithm that allows a
