Fixed doc links

--- a/ginga/examples/ipython-notebook/ginga_ipython_demo.ipynb
+++ b/ginga/examples/ipython-notebook/ginga_ipython_demo.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "# Get ginga from github (https://github.com/ejeschke/ginga) or\n",
     "#   pypi (https://pypi.python.org/pypi/ginga)\n",
-    "# Ginga documentation at: http://ginga.readthedocs.org/en/latest/"
+    "# Ginga documentation at: http://ginga.readthedocs.io/en/latest/"
    ]
   },
   {
@@ -141,7 +141,7 @@
     "\n",
     "You can open as many of these viewers as you want--just keep a handle to it and use a different name for each unique one.\n",
     "\n",
-    "Keyboard/mouse bindings in the viewer window: http://ginga.readthedocs.org/en/latest/quickref.html\n",
+    "Keyboard/mouse bindings in the viewer window: http://ginga.readthedocs.io/en/latest/quickref.html\n",
     "\n",
     "You will want to check the box that says \"I'm using a trackpad\" if you are--it makes zooming much smoother"
    ]
@@ -1097,7 +1097,7 @@
     "- for drawing, you will need either PIL/pillow, OpenCv or the [`aggdraw` module](https://github.com/ejeschke/aggdraw) module (python 2 only).  PIL is included in anaconda, so is usually all you need.\n",
     "- optional, but highly recommended: `webbrowser`, OpenCv\n",
     "\n",
-    "Latest Ginga documentation, including detailed installation instructions, can be found [here](http://ginga.readthedocs.org/en/latest/)."
+    "Latest Ginga documentation, including detailed installation instructions, can be found [here](http://ginga.readthedocs.io/en/latest/)."
    ]
   },
   {
