Updates to documentation
- replaced some figures to reflect architectural changes in classes

Also:
- added get_tags() method to canvases
- PEP8 clean ups in ImageView.py and Preferences plugin
- added a few items to jupyter notebook example

--- a/ginga/examples/jupyter-notebook/ginga_ipython_demo.ipynb
+++ b/ginga/examples/jupyter-notebook/ginga_ipython_demo.ipynb
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "'2.6.3.dev1378'"
+       "'2.6.3.dev1382'"
       ]
      },
      "execution_count": 1,
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1219,6 +1219,62 @@
     "fits_f = fits.open('camera.fits', 'readonly')\n",
     "hdu = fits_f[0]\n",
     "v1.load_hdu(hdu)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Miscellaneous"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'jpeg'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the default setting for HTML5 canvas rendering is 'jpeg'\n",
+    "settings = v1.get_settings()\n",
+    "settings.get('html5_canvas_format')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# using PNG will result in slightly greater clarity (especially for text overlay), but does introduce a\n",
+    "# slight performance hit because more data needs to be transferred each redraw between client and server\n",
+    "settings.set(html5_canvas_format='png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# If you want to resize the viewer, use this method\n",
+    "v1.resize(1000, 700)"
    ]
   },
   {
