Further updates to example ipywidgets notebook example

--- a/ginga/examples/jupyter-notebook/Jupyter Widget Ideas.ipynb
+++ b/ginga/examples/jupyter-notebook/Jupyter Widget Ideas.ipynb
@@ -23,7 +23,11 @@
     "\n",
     "`$ pip install ipyevents`\n",
     "\n",
-    "`$ jupyter nbextension enable --py --sys-prefix ipyevents`"
+    "`$ jupyter nbextension install --py --sys-prefix ipyevents`\n",
+    "\n",
+    "`$ jupyter nbextension enable --py --sys-prefix ipyevents`\n",
+    "\n",
+    "See https://github.com/mwcraig/ipyevents for JupyterLab installation instructions."
    ]
   },
   {
